samples/_failures_safe/1761325768_f1889e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7eb22a1.c:160:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 | void print_token
      | ^~~~
